--- a/.github/workflows/resize-before-scheduler.yml
+++ b/.github/workflows/resize-before-scheduler.yml
@@ -4,10 +4,11 @@ on:
   # Real-time: triggered via webhook when scheduler time changes
   repository_dispatch:
     types: [scheduler-time-changed]
-  # Default schedule: trigger at 18:55 WIB (5 minutes before default 19:00 scheduler)
-  # 18:55 WIB = 11:55 UTC (WIB = UTC+7)
+  # Default schedule: trigger at 18:45 WIB (15 minutes before default 19:00 scheduler)
+  # 18:45 WIB = 11:45 UTC (WIB = UTC+7)
+  # Note: GitHub Actions cron uses UTC timezone
   schedule:
-    - cron: '55 11 * * *'  # 11:55 UTC = 18:55 WIB (default)
+    - cron: '45 11 * * *'  # 11:45 UTC = 18:45 WIB (default)
   # Manual trigger
   workflow_dispatch:
 
@@ -25,6 +26,9 @@ jobs:
         id: quick-check
         run: |
           echo "🔍 Event Type: ${{ github.event_name }}"
+          echo "🕐 Current UTC Time: $(date -u +"%Y-%m-%d %H:%M:%S")"
+          echo "🕐 Current WIB Time: $(TZ='Asia/Jakarta' date +"%Y-%m-%d %H:%M:%S")"
+          echo "📅 Expected Trigger Time: 11:45 UTC = 18:45 WIB"
           
           # If triggered via webhook, use payload
           if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
@@ -34,7 +38,7 @@ jobs:
             WEEKEND_SKIP="${{ github.event.client_payload.weekend_skip }}"
           else
             # If triggered via schedule, fetch from API
-            echo "📡 Triggered via schedule (default 18:55 WIB)"
+            echo "📡 Triggered via schedule (default 18:45 WIB / 11:45 UTC)"
             RESPONSE=$(curl -s "${{ secrets.VITE_API_URL }}/api/public/scheduler/config")
             SCHEDULER_TIME=$(echo $RESPONSE | jq -r '.data.config.PHASE1_DATA_COLLECTION_TIME')
             TIMEZONE=$(echo $RESPONSE | jq -r '.data.config.TIMEZONE')
@@ -79,7 +83,7 @@ jobs:
           
           now_tz = datetime.now(tz)
           scheduler_dt = tz.localize(datetime(now_tz.year, now_tz.month, now_tz.day, hour, minute))
-          resize_dt = scheduler_dt - timedelta(minutes=5)
+          resize_dt = scheduler_dt - timedelta(minutes=15)
           
           resize_utc = resize_dt.astimezone(utc)
           scheduler_utc = scheduler_dt.astimezone(utc)
@@ -197,8 +201,8 @@ jobs:
           now_tz = datetime.now(tz)
           scheduler_dt = tz.localize(datetime(now_tz.year, now_tz.month, now_tz.day, hour, minute))
           
-          # Subtract 5 minutes
-          resize_dt = scheduler_dt - timedelta(minutes=5)
+          # Subtract 15 minutes
+          resize_dt = scheduler_dt - timedelta(minutes=15)
           
           # Convert to UTC
           resize_utc = resize_dt.astimezone(utc)
