fix: resize server logic bug

--- a/.github/workflows/resize-before-scheduler.yml
+++ b/.github/workflows/resize-before-scheduler.yml
@@ -1,15 +1,14 @@
 name: Resize Container Before Scheduler
 
 on:
-  # Real-time: triggered via webhook when scheduler time changes
+  # Real-time: triggered via webhook from backend node-cron (15 minutes before scheduler time)
+  # Backend automatically schedules this webhook trigger when:
+  # 1. Server starts (auto-start scheduler)
+  # 2. Scheduler config is updated
+  # 3. Scheduler is restarted
   repository_dispatch:
     types: [scheduler-time-changed]
-  # Default schedule: trigger at 18:45 WIB (15 minutes before default 19:00 scheduler)
-  # 18:45 WIB = 11:45 UTC (WIB = UTC+7)
-  # Note: GitHub Actions cron uses UTC timezone
-  schedule:
-    - cron: '45 11 * * *'  # 11:45 UTC = 18:45 WIB (default)
-  # Manual trigger
+  # Manual trigger (for testing/debugging)
   workflow_dispatch:
 
 env:
@@ -28,17 +27,16 @@ jobs:
           echo "🔍 Event Type: ${{ github.event_name }}"
           echo "🕐 Current UTC Time: $(date -u +"%Y-%m-%d %H:%M:%S")"
           echo "🕐 Current WIB Time: $(TZ='Asia/Jakarta' date +"%Y-%m-%d %H:%M:%S")"
-          echo "📅 Expected Trigger Time: 11:45 UTC = 18:45 WIB"
           
-          # If triggered via webhook, use payload
+          # If triggered via webhook from backend, use payload
           if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
-            echo "✅ Triggered via repository_dispatch webhook (scheduler time changed)"
+            echo "✅ Triggered via repository_dispatch webhook from backend node-cron"
             SCHEDULER_TIME="${{ github.event.client_payload.new_time }}"
             TIMEZONE="${{ github.event.client_payload.timezone }}"
             WEEKEND_SKIP="${{ github.event.client_payload.weekend_skip }}"
           else
-            # If triggered via schedule, fetch from API
-            echo "📡 Triggered via schedule (default 18:45 WIB / 11:45 UTC)"
+            # If triggered manually (workflow_dispatch), fetch from API
+            echo "📡 Triggered manually (workflow_dispatch) - fetching config from API"
             RESPONSE=$(curl -s "${{ secrets.VITE_API_URL }}/api/public/scheduler/config")
             SCHEDULER_TIME=$(echo $RESPONSE | jq -r '.data.config.PHASE1_DATA_COLLECTION_TIME')
             TIMEZONE=$(echo $RESPONSE | jq -r '.data.config.TIMEZONE')
