--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "backend",
   "version": "0.1.0",
@@ -23,7 +22,9 @@
     "@google-cloud/storage": "^7.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@types/node-cron": "^3.0.11",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jose": "^6.1.0",
     "midtrans-client": "^1.4.3",
